--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   }
 
   th, td{
-  /*padding: 12px 16px;*/
+  padding: 12px 16px;
   /*text-align:left;*/
   white-space:nowrap;
   overflow:hidden;
@@ -136,7 +136,7 @@ table thead th {
 }
 
       /* larguras padrão */
-.col-xs { width: 50px;  max-width: 50px;  }
+.col-xs { width: 50px;  max-width: 50px; text-align:center; }
 .col-sm { width: 80px;  max-width: 80px;  }
 .col-md { width: 140px; max-width: 140px; }
 .col-lg { width: 220px; max-width: 220px; }
