--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
   thead th:first-child{border-top-left-radius:12px}
   thead th:last-child{border-top-right-radius:12px}
   
-  /*th:last-child,
+  th:last-child,
   td:last-child{9
   border-right: none;
   width: 50px;
   text-align: center;
-}*/
+}
 
   
   /* ícone atendido */
@@ -136,7 +136,7 @@ table thead th {
 }
 
       /* larguras padrão */
-.col-xs { width: 50px;  max-width: 50px; text-align:center; }
+.col-xs { width: 50px;  max-width: 50px;  }
 .col-sm { width: 80px;  max-width: 80px;  }
 .col-md { width: 140px; max-width: 140px; }
 .col-lg { width: 220px; max-width: 220px; }
