--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   thead th:last-child{border-top-right-radius:12px}
   
   th:last-child,
-  td:last-child{9
+  td:last-child{
   border-right: none;
   width: 50px;
   text-align: center;
