--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
   header{
   display:flex;
-  justify-content:space-around;
+  justify-content:space-between;
   align-items:center;
   padding:12px 80px;
   background:#020617;
