--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
   text-align:center;
   font-size:20px;
   font-weight:bold;
+    vertical-align: middle; /* ✅ */
 }
 
 td.status-icon{text-align:center}
@@ -151,6 +152,10 @@ class^="col-"]{
 
 /* status sempre centralizado */
 .col-status{
+  text-align: center;
+}
+
+  tbody td{
   text-align: center;
 }
 
